FIX:  bootstrap dropdown issue (z-index)

--- a/Web/Content/videre.css
+++ b/Web/Content/videre.css
@@ -264,3 +264,6 @@ input[data-controltype="checkbox"] {
 }
 
 
+.bootstrap-select {
+    z-index:auto!important;
+}
